--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "npm init",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "build": "webpack",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,17 @@
   "bugs": {
     "url": "https://github.com/yuasa-engineer/ts-template/issues"
   },
-  "homepage": "https://github.com/yuasa-engineer/ts-template#readme"
+  "homepage": "https://github.com/yuasa-engineer/ts-template#readme",
+  "devDependencies": {
+    "html-loader": "^3.1.0",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
